Remove br to prevent overflow and utilize margin top and bottom css for the edit business user

--- a/src/styles/BusinessPageForm.css
+++ b/src/styles/BusinessPageForm.css
@@ -4,6 +4,14 @@
   margin-bottom: 20px;
 }
 
+div.ql-editor {
+  margin-bottom:  60px;
+}
+
+div.thumbnail {
+  margin-top: 60px;
+}
+
 /* job css */
 a.company-website-link {
   margin-bottom: 10px;
